--- a/style.css
+++ b/style.css
@@ -16,11 +16,7 @@ h1 {
   font-size: 2rem;
   letter-spacing: -1px;
   position: absolute;
-  margin: 0;
-  top: -4px;
-  right: 5px;
-  color: transparent;
-  text-shadow: 0 0 4px white;
-margin-right: 42%;
+  color:white;
+  margin-left: 43%
 }
 
